welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:3: error: not found: value Gris
    var couleur:Boolean = Gris
                          ^